refactored to semantic angular file structure

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,13 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="templates/browse/browse.js"></script>
+    <script src="templates/menu/menu.js"></script>
+    <script src="templates/myBrews/myBrews.js"></script>
+    <script src="templates/search/search.js"></script>
+    <script src="templates/settings/settings.js"></script>
+    
+
   </head>
 
   <body ng-app="hopOrNot">
