--- a/www/index.html
+++ b/www/index.html
@@ -20,12 +20,13 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/secrets.js"></script>
     <script src="templates/browse/browse.js"></script>
     <script src="templates/browse/browse.factory.js"></script>
     <script src="templates/menu/menu.js"></script>
-    <script src="templates/myBrews/myBrews.js"></script>
+    <script src="templates/hopList/hopList.js"></script>
     <script src="templates/search/search.js"></script>
     <script src="templates/settings/settings.js"></script>
 
