Added Factory for Bartender API; get request for all beers in Database, 200

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="templates/browse/browse.factory.js"></script>
     <script src="templates/menu/menu.js"></script>
     <script src="templates/hopList/hopList.js"></script>
+    <script src="templates/hopList/hopList.factory.js"></script>
     <script src="templates/search/search.js"></script>
     <script src="templates/settings/settings.js"></script>
 
