--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta http-equiv="Content-Security-Policy" content="default-src *;
+ style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'
+ 'unsafe-eval'"
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
@@ -28,6 +31,7 @@
     <script src="templates/browse/browse.js"></script>
     <script src="templates/browse/browse.factory.js"></script>
     <script src="templates/menu/menu.js"></script>
+    <script src="templates/landing/landing.js"></script>
     <script src="templates/hopList/hopList.js"></script>
     <script src="templates/hopList/hopList.factory.js"></script>
     <script src="templates/search/search.js"></script>
